random Bullshid go

--- a/UTD/ANGM-2315_AnimationOriginsAndTechniques/09-22-2023_Lecture.md
+++ b/UTD/ANGM-2315_AnimationOriginsAndTechniques/09-22-2023_Lecture.md
@@ -15,3 +15,35 @@
     - Musical
     - Horror
     - Film Noir
+  - Very Dirty Business
+- The Big Five
+  - MGM -> musicals
+  - Paramount -> romance/adventure
+  - Warner Bros -> only became part of Big Five after launch of sound
+  - Fox
+  - RKO -> different films
+- Small Three
+  - Universal -> Monster Movies, Scifi
+  - Columbia
+  - United Artists
+
+- Fleischer
+  - Movement more than narrative
+  - music would guide story
+  - everything moves all the time
+  - Beloved Characters:
+    - Betty Boop
+    - Popeye -> bought rights to comic
+    - Animated Superman
+
+- Lillian Friedman Astor
+  - Fleischer
+  - was not paid as much as the men
+  - excellent animator
+  - rotoscope patent -> 1936
+  - *Talking Animals and Other People*
+  - **Dancing on the Moon** film
+  - All of these animations were distrubuted by a studio and screened in theaters
+
+- What inspired me
+  - I actually really liked hearing about the inner workings of the Film Industry. It paints the classic golden age of Hollywood in a much darker light that is very interesting to me.
