--- a/UTD/ANGM-2315_AnimationOriginsAndTechniques/09-22-2023_Lecture.md
+++ b/UTD/ANGM-2315_AnimationOriginsAndTechniques/09-22-2023_Lecture.md
@@ -47,3 +47,28 @@
 
 - What inspired me
   - I actually really liked hearing about the inner workings of the Film Industry. It paints the classic golden age of Hollywood in a much darker light that is very interesting to me.
+
+- Walt Disney
+  - Moved from NY to Cali
+  - Studio Reogranized
+    - Disney was not a good animator
+    - old team came from Kansas City but they did not respect him since he wasn't as good
+    - senior animators moved on to different companies
+  - New Hires
+    - Nine old Men
+  - Develops Pre-Production Process
+  - Highly Concerned about Narrative/Story
+  - Storyboard, Storyboard Artist
+  - Pencil Test
+  - Pose-To-Pose Animation
+  - Inbetweener Role
+  - Educational Program in the studio
+    - live drawing and acting lessons to better understand movement and character's motivation
+  - Ink and Color Department
+
+- Stanislavski Method
+  - actor training system made of up of various different techniques designed to allow actors to create believeable characters and help them to really put themsleves in the place of a character.
+
+Disney Multiplane Camera
+
+- I loved learning about the Multiplane Camera since it is a very innovative take on Parallax in films.
