--- a/UTD/ANGM-2315_AnimationOriginsAndTechniques/ClassNotes/11-03-2023_Lecture.md
+++ b/UTD/ANGM-2315_AnimationOriginsAndTechniques/ClassNotes/11-03-2023_Lecture.md
@@ -47,3 +47,31 @@ STRANGE MAGIC SUCKS <- really bad
 
 
 Note: I love how different cultures and different locations influence animations to tell similar stories in incredibly different ways.
+
+### Anime History
+- in 1958 Toei Studios realease the fisrst color animted feature in Japan
+  - Legen of the White Snake
+  - disney influences
+- Toei continues making features through the 1960s
+  - Journey To The West
+- 1960s: toei feature films
+- 1970s: increase anime exportation
+- 1980s: seen as golden age
+- 1990s: japanese economic bubble bust causing a retrenchment in the animation industry, meanwhile anime sales in the US provided new source of income
+- 2000s: worldwide economic recession in the mid and late 2000s, hurting the industry
+- 2010s: rise of online steaming services make anime more accessable to viewers worldwide, Japanese industry making a slow recovery
+
+### Osamu Tezuka
+- doctor during WWII
+- after war, he decided he would be a manga artist
+- trememdous influence
+- created astroboy
+- he took a real cinematic view of how to present the pictures
+- created flow of story
+- 1963: Tezuka creates the first television anime show-broadcast in both Japan and the US
+
+
+Ouran High School Host Club
+- men and women are drawn differently
+
+Mecha, Magic Girl, 
